[tool.poetry]
name = "take home"
version = "0.1.0"
description = ""
authors = ["brian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aioredis = "^2.0.1"
quart = "^0.18.4"
quart-redis = "^2.0.0"
aiohttp = "^3.8.4"
hypercorn = "^0.14.3"
httpie = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
